--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -2,7 +2,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid ">
-      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 30px; max-height: 30px;"></a>
+      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,8 @@
  <section class="hero  text-center py-5 d-flex justify-content-center align-items-center">
   <div class="container-fluid">
     <h1>A trusted and secure market exchange.</h1>
-    <p>Crypo is the most advanced UI kit for making the Blockchain platform. <br>This kit comes with 4 different exchange pages, market, wallet, and many more.</p>
+    <p>Our trading platform, EpicTrading, offers a cutting-edge user interface designed for seamless trading experiences. <br> With EpicTrading, you'll have access to a suite of powerful features. <br> Whether you're a seasoned trader or just getting started, EpicTrading has you covered for all your trading needs.</p>
+
 
     <div class="row">
       <div class="col-md-6 mx-auto">
@@ -281,5 +282,5 @@
 </div>
 <!-- <div *ngFor="let transaction of marketData">
   <h2> sdfsdf{{ transaction.name }}</h2>
-
+  <h2> sdfsdf{{ transaction.price }}</h2>
 </div> -->
