--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -1,5 +1,5 @@
 <!-- <button (click)="toggleFullscreen()">Visualizza a schermo intero</button> -->
-<header>
+<header class="mb-5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
@@ -20,28 +20,29 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-      </div>
+        </div>
         <div  class="navbar-nav "   style=" margin-left:auto;">
         <!-- Aggiungi i bottoni "Login" e "Register" anche qui -->
         <button class="btn btn-light btn-sm ml-2">Login</button>
         <button class="btn btn-primary btn-sm ml-2">Register</button>
-      </div>
-      </div>
+         </div>
+       </div>
     </div>
   </nav>
+  <hr class="m-0 p-0" style="color: grey;">
 </header>
-<hr class="m-0 p-0" style="color: grey;">
+
 
 
 
  <!-- Hero Section -->
- <section class="hero  text-center py-5 d-flex justify-content-center align-items-center">
+ <section class="hero  text-center py-5 d-flex justify-content-center align-items-center mb-5">
   <div class="container-fluid">
     <h1>A trusted and secure market exchange.</h1>
-    <p>Our trading platform, EpicTrading, offers a cutting-edge user interface designed for seamless trading experiences. <br> With EpicTrading, you'll have access to a suite of powerful features. <br> Whether you're a seasoned trader or just getting started, EpicTrading has you covered for all your trading needs.</p>
+    <p class="mb-5">Our trading platform, EpicTrading, offers a cutting-edge user interface designed for seamless trading experiences. <br> With EpicTrading, you'll have access to a suite of powerful features. <br> Whether you're a seasoned trader or just getting started, EpicTrading has you covered for all your trading needs.</p>
 
 
-    <div class="row">
+    <div class="row mb-5">
       <div class="col-md-6 mx-auto">
         <form (ngSubmit)="submitForm(myForm)" #myForm="ngForm">
           <div class="form-group">
@@ -55,7 +56,7 @@
 </section>
 
 <!-- testo che ruota infinito -->
-<div class="marquee-container" >
+<div class="marquee-container mb-5 py-4" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
   <div class="marquee-content" >
 
 
@@ -93,8 +94,9 @@
   <div class="container text-center">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h2 class="text-center">Features</h2>
-        <p>Il tuo testo va qui...</p>
+        <h2 class="text-center">Experience Seamless Trading:</h2>
+        <p>
+          EpicTrading offers an intuitive and user-friendly interface, ensuring that you can navigate the financial markets with ease. <br> Whether you're trading stocks, currencies, or commodities, <br> our platform provides a seamless and efficient experience.</p>
       </div>
       <div class="col-md-6">
         <img src="url-dell'immagine.jpg" alt="Descrizione dell'immagine" class="img-fluid">
@@ -105,107 +107,163 @@
 
 
 <!-- Features Section -->
-<section id="features" class="py-5">
-  <div class="container text-center">
+<section id="feature" class="py-5">
+  <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6 order-md-2">
-        <img src="url-dell'immagine.jpg" alt="Descrizione dell'immagine" class="img-fluid">
+
+      <div class="col-md-6 ">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title"></h2>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Symbol</th>
+                  <!-- <th scope="col">Name</th> -->
+                  <th scope="col">Volume</th>
+                  <th scope="col">Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let stock of marketData.slice(0,5)">
+                  <td>{{ stock.symbol }}</td>
+                  <!-- <td>{{ stock.name }}</td> -->
+                  <td>{{ stock.volume }}</td>
+                  <td [style.color]="stock.color">{{ stock.price | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
-      <div class="col-md-6 order-md-1">
-        <h2 class="text-center">Features</h2>
-        <p>Il tuo testo va qui...</p>
+      <div class="col-md-6">
+        <h2>Diverse Market Offerings:</h2>
+        <p>
+          Explore a diverse range of financial instruments, from stocks and cryptocurrencies to forex and commodities. With EpicTrading, you have access to a wide spectrum of markets, allowing you to diversify your portfolio and optimize your trading strategy.
+        </p>
       </div>
     </div>
+  </div>
+</section>
+
+
+
+<hr class="" style="color: grey;">
+
+<!-- card section -->
+<section id="features" class="py-5 mb-5">
+  <div class="container text-center">
+    <h2 class="mb-5">Here are a few reasons why <br>
+      you should choose EpicTrading</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <div class="card h-100">
+          <!-- <img src="immagine-1.jpg" class="card-img-top" alt="Immagine 1"> -->
+          <div class="card-body">
+            <h5 class="card-title">Educational Resources</h5>
+            <p class="card-text">
+              We believe in the power of knowledge. EpicTrading offers a wealth of educational resources, including webinars, tutorials, and market insights. Whether you're a beginner or a seasoned trader, our educational materials will help you sharpen your skills and make informed decisions.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <!-- <img src="immagine-2.jpg" class="card-img-top" alt="Immagine 2"> -->
+          <div class="card-body">
+            <h5 class="card-title"> Secure and Reliable</h5>
+            <p class="card-text">
+              Your security is our top priority. EpicTrading employs cutting-edge security measures to safeguard your funds and personal information. Trade with confidence, knowing that your assets are protected by the latest security protocols.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <!-- <img src="immagine-3.jpg" class="card-img-top" alt="Immagine 3"> -->
+          <div class="card-body">
+            <h5 class="card-title">Advanced Trading Tools</h5>
+            <p class="card-text">
+              Gain a competitive edge with our suite of advanced trading tools. Access real-time market data, advanced charting, and technical analysis to make informed trading decisions. Our platform empowers you to stay ahead of market trends and execute trades with precision.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+<section id="pricing" class="bg-primary py-5 mb-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-4 text-center">
+        <h2 class=" text-white" style="font-size: 50PX;">$546B</h2>
+        <p class=" text-white">Quartetly volume traded</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <h2 class=" text-white" style="font-size: 50PX;">100 +</h2>
+        <p class=" text-white">Countries supported</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <h2 class=" text-white" style="font-size: 50PX;">30+M</h2>
+        <p class=" text-white">Verified users</p>
+      </div>
+    </div>
+    <!-- Aggiungi il tuo contenuto per i prezzi qui -->
   </div>
 </section>
 
 
 
 <!-- card section -->
-<section id="features" class="py-5">
+<section id="features" class="py-5 mb-5">
   <div class="container text-center">
-    <h2>Features</h2>
+    <h2 class="mb-5">Get started in a few steps</h2>
     <div class="row justify-content-center">
       <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-1.jpg" class="card-img-top" alt="Immagine 1">
+        <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
+          <img src="../../../assets/user.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Feature 1</h5>
-            <p class="card-text">Descrizione della Feature 1.</p>
+            <h5 class="card-title">Create yout account</h5>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-2.jpg" class="card-img-top" alt="Immagine 2">
+        <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
+          <img src="../../../assets/bank.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Feature 2</h5>
-            <p class="card-text">Descrizione della Feature 2.</p>
+            <h5 class="card-title">Link your bank account</h5>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-3.jpg" class="card-img-top" alt="Immagine 3">
+        <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
+          <img src="../../../assets/trade .svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Feature 3</h5>
-            <p class="card-text">Descrizione della Feature 3.</p>
+            <h5 class="card-title">Start buying and selling</h5>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </section>
-
 
 
 
 <!-- banner -->
-<section id="pricing" class="bg-light py-5">
+<section id="pricing" class="bg-light py-5 ">
   <div class="container">
-      <h2 class="text-center">Pricing</h2>
-      <!-- Add pricing content here -->
-  </div>
-</section>
+    <h2 class="text-center">Join EpicTrading today and unlock your full trading potential. Experience the future of trading with a platform that is built on innovation, reliability, and a commitment to your success. Start your trading journey with us and embark on a path to financial greatness.</h2>
 
-
-
-<!-- card section -->
-<section id="features" class="py-5">
-  <div class="container text-center">
-    <h2>Features</h2>
-    <div class="row justify-content-center">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-1.jpg" class="card-img-top" alt="Immagine 1">
-          <div class="card-body">
-            <h5 class="card-title">Feature 1</h5>
-            <p class="card-text">Descrizione della Feature 1.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-2.jpg" class="card-img-top" alt="Immagine 2">
-          <div class="card-body">
-            <h5 class="card-title">Feature 2</h5>
-            <p class="card-text">Descrizione della Feature 2.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="immagine-3.jpg" class="card-img-top" alt="Immagine 3">
-          <div class="card-body">
-            <h5 class="card-title">Feature 3</h5>
-            <p class="card-text">Descrizione della Feature 3.</p>
-          </div>
-        </div>
-      </div>
+    <!-- Aggiunta del pulsante -->
+    <div class="text-center mt-4">
+      <button class="btn btn-primary btn-lg" (click)="redirectToRegister()">Get Started</button>
     </div>
   </div>
 </section>
-
 <!-- banner -->
 <section id="pricing" class="bg-light py-5">
   <div class="container">
@@ -224,63 +282,25 @@
 </section>
 
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>ID Cliente</th>
-      <th>Ragione Sociale</th>
-      <th>Partita IVA</th>
-      <th>Email Cliente</th>
-      <th>PEC</th>
-      <th>Telefono Cliente</th>
-      <th>Tipo Cliente</th>
-      <th>Nome Contatto</th>
-      <th>Cognome Contatto</th>
-      <th>Telefono Contatto</th>
-      <th>Data Inserimento</th>
-      <th>Ultimo Contatto</th>
-      <th>Fatturato Annuale</th>
-      <th>Fatture</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- Utilizza *ngFor per iterare attraverso l'array dei clienti -->
-    <tr *ngFor="let transaction of transaction">
-      <td>{{ transaction.amount }}</td>
-      <td>{{ transaction.currency }}</td>
-      <td>{{ transaction.currency}}</td>
-      <td>{{ transaction.transactionType }}</td>
-      <td>{{ transaction.timeStamp}}</td>
-      <td>{{ transaction.order.orderType }}</td>
-      <td>{{ transaction.order.quantity }}</td>
-      <td>{{ transaction.order.timeStamp }}</td>
-      <td>{{ transaction.order.marketData.volume }}</td>
-      <td>{{ transaction.order.marketData.timeStamp }}</td>
-      <td>{{ transaction.order.marketData.symbol }}</td>
-      <td>{{ transaction.order.marketData.price }}</td>
-      <td>{{transaction.order.marketData.name }}</td>
-      <!-- <td>{{ cliente.fatture }}</td> -->
-      <!-- <ul>
-        <li *ngFor="let fattura of cliente.fatture">
-              importo : {{ fattura.importo}}
-        </li>
-      </ul> -->
-      <!-- <td>{{ cliente.indirizzoSedeL }}</td> -->
-      <td>
-        <td >
-          <!-- <div    class="btn-group" role="group">
-            <button class="btn btn-primary" >Modifica</button>
-            <button class="btn btn-danger"  (click)="onDeleteCliente(cliente.idCliente)">Elimina</button>
-          </div> -->
-        </td>
-    </tr>
-  </tbody>
-</table>
-<div>
-  <button class="btn btn-secondary" (click)="previousPage()" >Pagina precedente</button>
-  <button class="btn btn-secondary m-3" (click)="nextPage()" >Pagina successiva</button>
+<div class="container mt-4">
+  <h2>Market Stock Actions</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Symbol</th>
+        <th scope="col">Name</th>
+        <th scope="col">Volume</th>
+        <th scope="col">Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let stock of marketData">
+        <td>{{ stock.symbol }}</td>
+        <td>{{ stock.name }}</td>
+        <td>{{ stock.volume }}</td>
+        <td [style.color]="stock.color" >{{ stock.price | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<!-- <div *ngFor="let transaction of marketData">
-  <h2> sdfsdf{{ transaction.name }}</h2>
-  <h2> sdfsdf{{ transaction.price }}</h2>
-</div> -->
+
