--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -56,7 +56,7 @@
 </section>
 
 <!-- testo che ruota infinito -->
-<div class="marquee-container mb-5 py-4" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
+<div class="marquee-container mb-5 py-4 bg-light" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
   <div class="marquee-content" >
 
 
