--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <div>
         <ul class="navbar-nav mx- ">
           <li class="nav-item">
-            <a class="nav-link" href="#features">Market</a>
+            <a class="nav-link" routerLink="/market" routerLinkActive="active">Market</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
