--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -23,8 +23,8 @@
         </div>
         <div  class="navbar-nav "   style=" margin-left:auto;">
         <!-- Aggiungi i bottoni "Login" e "Register" anche qui -->
-        <button class="btn btn-light btn-sm ml-2">Login</button>
-        <button class="btn btn-primary btn-sm ml-2">Register</button>
+        <!-- <button class="btn btn-light btn-sm ml-2">Login</button>
+        <button class="btn btn-primary btn-sm ml-2">Register</button> -->
          </div>
        </div>
     </div>
