--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -36,12 +36,12 @@
           class="visually-hidden">unread messages</span></span>
     </a>
     <ul class="dropdown-menu dropdown-menu-end ">
-      <li class="d-flex align-items-center" > <a class="dropdown-item" href="#"><div class="position-relative" id="">
+      <li class="m-2" > <a class="dropdown-item" href="#"><div class="position-relative" id="">
         <span id="span-logout"
           class=" "><span
             class="visually-hidden">unread messages</span></span></div></a><div class="me-3">
               <p class="m-0">Annette Black</p>
-              <p class="m-0 text-secondary">annette@geeksui.com</p>
+              <p class="m-0 text-secondary ">annette@geeksui.com</p>
           </div></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item d-flex align-items-center " href="#">
