--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -30,13 +30,13 @@
 
   <div id="navbar-avatar" class="col-6 dropdown position-relative">
     <a class=" dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      <img class="rounded-circle mx-2" src="assets/imgs/avatar-5.jpg" alt="" width="60px" height="60px" />
+      <img class="rounded-circle mx-2" src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" alt="" width="60px" height="60px" />
       <span id="nav-avatar"
         class="position-absolute translate-middle badge border border-light rounded-circle bg-success p-2"><span
           class="visually-hidden">unread messages</span></span>
     </a>
     <ul class="dropdown-menu dropdown-menu-end ">
-      <li class="m-2" > <a class="dropdown-item" href="#"><div class="position-relative" id="">
+      <li class="mx-4" > <a class="dropdown-item" href="#"><div class="position-relative" id="">
         <span id="span-logout"
           class=" "><span
             class="visually-hidden">unread messages</span></span></div></a><div class="me-3">
