--- a/Epic_Trading/src/app/auth/login/login.component.html
+++ b/Epic_Trading/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<!-- <div class="jumbotron text-center">
   <h1>Epic Energy Services</h1>
 
   <p>Pannello di controllo gestione Clienti e Fatture</p>
@@ -22,13 +22,17 @@
       <p class="mt-3">Non hai un account? <a href="/register">Registrati qui</a>.</p>
     </div>
   </div>
-</div>
+</div> -->
 
-
-
-
+<!-- <div class=" container-fluid text-center mt-5 ">
+<a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 2em;">EPICTRADING</span></a>
+</div> -->
 <div class="form-box mx-auto mt-5">
+
   <form class="form">
+    <div class=" title container-fluid text-center ">
+      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
+      </div>
       <span class="title">Log in</span>
       <span class="subtitle">Access with your account.</span>
       <div class="form-container">
