--- a/Epic_Trading/src/app/auth/register/register.component.html
+++ b/Epic_Trading/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<!-- <div class="jumbotron text-center">
   <h1>Epic Energy Services</h1>
 
   <p>Pannello di controllo gestione Clienti e Fatture</p>
@@ -32,23 +32,22 @@
           <input type="password" class="form-control" id="password" name="password" required [(ngModel)]="password">
         </div>
         <div class="mb-3">
-          <!-- <label for="ruolo" class="form-label">Ruolo</label>
-          <select class="form-select" id="ruolo" name="ruolo" required [(ngModel)]="role">
-            <option value="USER">USER</option >
-            <option value="ADMIN">ADMIN</option>
-          </select> -->
+
         </div>
         <button (click)="register()" type="submit" class="btn btn-primary">Registrati</button>
       </form>
       <p class="mt-3">Se sei già registrato, <a href="/login">accedi qui</a>.</p>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
 <div class="form-box mx-auto mt-5">
   <form class="form">
+    <div class=" title container-fluid text-center ">
+      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
+      </div>
       <span class="title">Sign up</span>
       <span class="subtitle">Create a free account with your email.</span>
       <div class="form-container">
