rotte controlpanel login register logoname

--- a/Epic_Trading/src/app/auth/register/register.component.html
+++ b/Epic_Trading/src/app/auth/register/register.component.html
@@ -46,7 +46,7 @@
 <div class="form-box mx-auto mt-5">
   <form class="form">
     <div class=" title container-fluid text-center ">
-      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
+      <a class="navbar-brand" href="/controlPanel"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
       </div>
       <span class="title">Sign up</span>
       <span class="subtitle">Create a free account with your email.</span>
