--- a/Epic_Trading/src/app/auth/login/login.component.html
+++ b/Epic_Trading/src/app/auth/login/login.component.html
@@ -31,7 +31,7 @@
 
   <form class="form">
     <div class=" title container-fluid text-center ">
-      <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
+      <a class="navbar-brand" href="/controlPanel"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
       </div>
       <span class="title">Log in</span>
       <span class="subtitle">Access with your account.</span>
