add user info method

--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -40,8 +40,8 @@
         <span id="span-logout"
           class=" "><span
             class="visually-hidden">unread messages</span></span></div></a><div class="me-3">
-              <p class="m-0">Annette Black</p>
-              <p class="m-0 text-secondary ">annette@geeksui.com</p>
+              <p class="m-0"> {{ currentUserInfo.name }}</p>
+              <p class="m-0 text-secondary "> {{ currentUserInfo.email }}</p>
           </div></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item d-flex align-items-center " href="#">
