update rotte routerlink

--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.scss
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.scss
@@ -70,3 +70,12 @@
  /* <-- This number should always be 10 times the number up there*/
   }
 }
+
+
+// header, nav, .container-fluid{
+
+
+//     background-color: #e0ecfb;
+//     // box-shadow: rgb(0 0 0 / 8%) 0 -1px;
+
+// }
