--- a/Epic_Trading/src/app/components/navbar/navbar.component.scss
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.scss
@@ -1,28 +1,23 @@
-#navbar-bell {
-  width: 60px;
-  height: 60px;
-}
 
 #nav-avatar {
   left: 60px;
   top: 30px;
 }
 
-.navbar-toggler {
-  color: #714cfd;
-  border: 1px solid #714cfd;
-}
+// .navbar-toggler {
+//   color: #4ca7fd;
+//   border: 1px solid #4cadfd;
+// }
 
-#navbar-bell span {
-  right: -8px;
-  bottom: 35px;
-  background-color: #714cfd;
-}
+
 
 .dropdown a {
   text-decoration: none;
   color: black;
 }
+
+
+
 
 .navbar-toggler:focus {
   box-shadow: none;
@@ -45,25 +40,7 @@
     right: 60px;
   }
 }
-#hero-section {
-  background-color: #714cfd;
-  padding: 0 2em;
-}
-#hero-section div button {
-  padding: 1em;
-}
 
-.hero-bg {
-  background-color: #feedd9;
-}
-
-.hero-icons {
-  color: #d8a56a;
-}
-
-#hero-text {
-  color: white;
-}
 
 #h1 {
   font-weight: 900;
@@ -93,19 +70,6 @@
   border-radius: 0;
 }
 
-.carousel-inner {
-  padding: 1em;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-  background-color: #e1e1e1;
-  width: 5vh;
-  height: 5vh;
-  border-radius: 50%;
-  top: 50%;
-  transform: translateY(-50%);
-}
 
 .card:hover {
   box-shadow: 5px 10px 15px 3px rgb(154, 154, 154);
@@ -125,14 +89,3 @@
 //   font-family: "feather", sans-serif;
 // }
 
-.icon-main {
-  width: 60px;
-  height: 60px;
-}
-
-#footer-link li {
-  border: 0;
-}
-#footer-link li a {
-  text-decoration: none;
-}
