--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
                     <div class="col-md-12">
                       <h5 class="loader">Balance </h5>
 
-                      <p>INSERIRE QUI IL BALANCE</p>
+                      <p>{{ currentUserInfo.balance| currency:'USD':'symbol-narrow':'1.2-2' }}</p>
                     </div>
                   </div>
 
