--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -28,7 +28,7 @@
 
 
 
-
+<!--
 <div class="container mt-4">
   <h2>Market Stock Actions</h2>
   <table class="table">
@@ -61,7 +61,41 @@
       </tr>
     </tbody>
   </table>
+</div> -->
+
+
+<div class="container mt-4">
+  <h2>Market Stock Actions</h2>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" class="d-none d-md-table-cell">Symbol</th>
+          <th scope="col" >Name</th>
+          <th scope="col" class="d-none d-md-table-cell">Volume</th>
+          <th scope="col" >Price</th>
+          <th scope="col" >Quantity</th>
+          <th scope="col" >Action</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let stock of marketData">
+          <td class="d-none d-md-table-cell">{{ stock.symbol }}</td>
+          <td >{{ stock.name }}</td>
+          <td class="d-none d-md-table-cell">{{ stock.volume }}</td>
+          <td  [style.color]="stock.color">{{ stock.price | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+          <td >
+            <div class="input-group">
+              <input type="number" [(ngModel)]="stock.quantity" class="form-control" placeholder="Enter Quantity">
+            </div>
+          </td>
+          <td >
+            <button (click)="createTransaction(stock.id, stock.quantity); stock.quantity = null!" class="btn btn-primary">Acquista</button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-
-
-
