--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">boooooooh</a>
+            <a class="nav-link" routerLink="/marketAnalyst" routerLinkActive="active">DEVO PENSARCI</a>
           </li>
         </ul>
         </div>
