--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -70,6 +70,9 @@
                             <td>
                               {{(portfolioStock.purchasePrice )  * portfolioStock.quantity | number:'1.2-2'}}
                             </td>
+                            <td>
+                              <button (click)="viewDetails(portfolioStock.marketData.id)" class="btn btn-secondary">Dettagli</button>
+                            </td>
                           <!-- <td>
 
                             <ul>
